[tool.poetry]
name = "dqn_extended"
version = "0.1.0"
description = ""
authors = ["Anaelle Laurans <16943368+Laurans@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.12.1"
atari-py = "^0.1.7"
opencv-python = "^4.1"
pyyaml = "^5.1"
click = "^7.0"
torch = {path = "../../../wheels/torch-1.1.0-cp37-cp37m-linux_x86_64.whl"}
torchvision = "^0.2.2"
coolname = "^1.1"
ptan = {git = "https://github.com/Shmuma/ptan.git"}
wandb = "^0.8.0"
future = "^0.17.1"
altair = "^3.0"
selenium = "^3.141"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
